--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="userlist" class="box" onclick="helloworld()">
-      Hello World!, with HTML!
+      Hello dua
     </div>
     <!-- Exercise 02-1: Add two more divs for chat and inputbox -->
   </body>
